# docs/swagger.json
@@ -28,8 +28,8 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
+                            "type": "object",
+                            "additionalProperties": {
                                 "type": "string"
                             }
                         }
@@ -209,11 +209,17 @@
         "models.PaginaResultado": {
             "type": "object",
             "properties": {
+                "anterior": {
+                    "type": "string"
+                },
                 "dados": {
                     "type": "object"
                 },
                 "pagina": {
                     "type": "integer"
+                },
+                "proxima": {
+                    "type": "string"
                 },
                 "total_paginas": {
                     "type": "integer"
